<resources>
    <string name="app_name">MovieApp</string>
    <string name="home">Home</string>
    <string name="popularMovies">Popular Movies</string>
    <string name="ImdbRatedMovies">IMDB Rated Movies</string>
    <string name="UpcomingMovies">Upcoming Movies</string>
    <string name="main_menu">Main Menu</string>
    <string name="tvSeries">TV Series</string>
    <string name="popularSeries">Popular Series</string>
    <string name="imdbSeries">IMDB Rated Series</string>
    <string name="airingSeries">Airing Series</string>
    <string name="trending">Trending</string>
    <string name="movies">Movies</string>
    <string name="search_movies_series">Search movies/series</string>
    <string name="search">Search Movie Only</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_app">Movie App</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="next">Next</string>
    <string name="movie_image">Movie Image</string>
    <string name="rated">Rated: </string>
    <string name="length">Length: </string>
    <string name="genre">Genre: </string>
    <string name="released">Released: </string>
    <string name="original_title">Original Title: </string>
    <string name="description">Description: </string>
    <string name="tempText">sgsskajsfhkjshdfkjhaskjsdfnskfskdjfnkjsdnfkjskfskdjfnkjsdnfkjsndkjfnskjdnfkjsnfkjsdnfdfhkjsadhfkjshdfkjshdfjkhksjhfksdhfkjhsdfksjfkjslkfskfskdjfnkjsdnfkjsndkjfnskjdnfkjsnfkjsdnfdfhkjsadhfkjshdfkjshdfjkhksjhfksdhfkjhsdfksjfkjslkfsndkjfnskjdnfkjsnfkjsdnfdfhkjsadhfkjshdfkjshdfjkhksjhfksdhfkjhsdfksjfkjslkfg</string>
    <string name="movie_descriptive_images">Movie descriptive images</string>
    <string name="recommendation">Recommendations</string>
    <string name="no_recommendation">No Recommendations</string>
    <string name="no_reviews">No Reviews</string>
    <string name="alertDialogTitle">No Internet Connection</string>
    <string name="alertDialogMsg">Please connection to stable internet and try again.</string>
    <string name="alertDialogPositionBtn">Exit App</string>
    <string name="alertDialogNegativeBtn">Retry</string>
    <string name="ErrorPageMsg">Opps! Something went wrong.</string>
    <string name="saved_items">Saved Items</string>
    <string name="movie_saved">Movie is saved</string>
    <string name="series_saved">Series is saved</string>
    <string name="remove_from_items">Remove from saved</string>
    <string name="no_saved_items">No Saved Items</string>
    <string name="subtitle">By Abhishek</string>

</resources>