<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainToolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_Main"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@string/main_menu"
            android:focusable="true"
            android:src="@drawable/menu_icon_main"
            app:tint="@color/white" />

        <View
            android:id="@+id/searchTempSpace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/cancelSearchEditText"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:clickable="true"
                android:contentDescription="@string/search_movies_series"
                android:focusable="true"
                android:src="@drawable/cancel_icon"
                android:visibility="gone"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="7dp"
                android:imeOptions="actionDone"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@drawable/search_bar_rounded"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="3dp"
                android:visibility="gone"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>


        <ImageView
            android:id="@+id/search_main"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/search_movies_series"
            android:focusable="true"
            android:src="@drawable/search_main"
            app:tint="@color/white" />
    </LinearLayout>


</androidx.appcompat.widget.Toolbar>